IKASAN-2714 sorting out ACTIVE sessions based on Vaadin lifecycle method calls.